--- a/HTML/index.html
+++ b/HTML/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <title>El Lumbreyecto</title>
-        <link rel="stylesheet" href="/Style.css">
-        <link rel="stylesheet" href="/Fonts.css">
-        <link rel="shortcut icon" href="/logo_pestania.png">
+        <link rel="stylesheet" href="/Server_SiteBase-main/CSS/Style.css">
+        <link rel="stylesheet" href="/Server_SiteBase-main/CSS/Fonts.css">
+        <link rel="shortcut icon" href="/Server_SiteBase-main/Images/logo_pestania.png">
     </head>
     <body>
         <div class="background">
@@ -17,16 +17,16 @@
             </div>
             <div id="interface"><h2>Clientes disponibles:</h2>
                 <div class="cards">
-                    <img src="/Laptop.webp" alt="Una laptop">
+                    <img src="/Server_SiteBase-main/Images/Laptop.webp" alt="Una laptop">
                 </div>
                 <div class="cards">
-                    <img src="/Laptop.webp" alt="Una laptop">
+                    <img src="/Server_SiteBase-main/Images/Laptop.webp" alt="Una laptop">
                 </div>
                 <div class="cards">
-                    <img src="/Laptop.webp" alt="Una laptop">
+                    <img src="/Server_SiteBase-main/Images/Laptop.webp" alt="Una laptop">
                 </div>
                 <div class="cards">
-                    <img src="/Laptop.webp" alt="Una laptop">
+                    <img src="/Server_SiteBase-main/Images/Laptop.webp" alt="Una laptop">
                 </div>
             </div>
         </div>
